GL/Projet_GL/src/test/deca/syntax/invalid/AvecObjet/manque_mot_class.deca
// Test : manque du mot clé Class
// But : détecter quand une classe n'est pas déclarée avec le mot clé Class
// Type d'erreur : erreur syntaxique
// Résultat attendu : no viable alternative at input 'A'


A{
    int i;
    boolean p;
}



{
    A a = new A();
}